--- a/GoodExchangeApplication/MyRazorPage/Pages/AddToCart.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/AddToCart.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "/addtocart"
-@model MyRazorPage.Pages.Order.AddToCartModel
+@using MyRazorPage.Pages.Transaction
+@model AddToCartModel
 @{
     ViewData["Title"]="AddToCart";
     Layout ="_Layout";
@@ -193,4 +194,4 @@
                     </div>
                 </div>
             </div>
-</div
+</div>
