--- a/GoodExchangeApplication/MyRazorPage/Pages/AddToCart.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/AddToCart.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "/addtocart"
 @using MyRazorPage.Pages.Transaction
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @model AddToCartModel
 @{
     ViewData["Title"]="AddToCart";
