--- a/GoodExchangeApplication/MyRazorPage/Pages/CheckOut.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/CheckOut.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "/checkout";
 @model MyRazorPage.Pages.Order.CheckOutModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
 }
