--- a/GoodExchangeApplication/MyRazorPage/Pages/Homepage/HomePage.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Homepage/HomePage.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "/home"
 @model MyRazorPage.Pages.Homepage.HomePageModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     ViewData["title"] = "Homepage";
 }
