--- a/GoodExchangeApplication/MyRazorPage/Pages/Homepage/ProductDetailPage.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Homepage/ProductDetailPage.cshtml
@@ -1,4 +1,5 @@
 ﻿@page "/productdetails"
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @model MyRazorPage.Pages.Homepage.ProductDetailPageModel
 @{
 }
