--- a/GoodExchangeApplication/MyRazorPage/Pages/Account/register.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Account/register.cshtml
@@ -1,7 +1,10 @@
-﻿@page "/register/"
+﻿@page "/Account/register"
 @model MyRazorPage.Pages.Account.registerModel
+@* import mvc.taghelpers *@
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     ViewData["Title"] = "REGISTER";
+    Layout = null;
 }
 
 <head>
@@ -9,56 +12,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="~/css/auth/login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
 </head>
 
 <body>
     <div class="wrapper">
-        <div class="container main ">
-            <div class="row ">
-                @*Image*@
+        <div class="container main">
+            <div class="row">
+                <!-- Image -->
                 <div class="col-md-6 side-image">
-                    <img src="~/images/" alt="" />
+                    <img src="~/images/side_image.jpg" alt="" />
                     <div class="text">
-                        <p>Join the community of FU Students <i>- Gooodies</i></p>
+                        <p>Join the community of FU Students <i>- Goodies</i></p>
                     </div>
                 </div>
-                @*Login Form *@
+                <!-- Registration Form -->
                 <div class="col-md-6 right">
                     <div class="input-box">
                         <h1 class="text-center">Register</h1>
-                        <form method="post" class="my-4">
+                        <form asp-page-handler="Register" method="post" class="my-4">
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="input-field">
                                 <label class="control-label">FullName</label>
-                                <input class="input" />
-                                <span class="text-danger"></span>
+                                <br />
+                                <input class="input" type="text" name="FullName"  required />
+                                <span  class="text-danger"></span>
                             </div>
                             <div class="input-field">
                                 <label class="control-label">Email</label>
-                                <input class="input" />
+                                <br />
+                                <input class="input" type="email" name="Email" required />
                                 <span class="text-danger"></span>
                             </div>
                             <div class="input-field">
                                 <label class="control-label">Password</label>
-                                <input class="input" type="password" />
-                                <span class="text-danger"></span>
+                                <br />
+                                <input class="input" type="password" name="Password" required />
+                                <span  class="text-danger"></span>
+                            </div>
+                            <div class="input-field">
+                                <label class="control-label">Telephone</label>
+                                <br />
+                                <input class="input" type="tel" name="Telephone"  required />
+                                <span  class="text-danger"></span>
+                            </div>
+                            <div class="input-field">
+                                <label class="control-label">Address</label>
+                                <br />
+                                <input class="input" type="text" name="Address"  required />
+                                <span  class="text-danger"></span>
                             </div>
                             <div class="form-group text-danger">
                                 @ViewData["notification"]
                             </div>
                             <div class="input-field">
-                                <button method="post" asp-page-handler="login" type="submit" class="btn btn-primary submit" value="Sign Up">Register</button>
+                                <button type="submit" class="btn btn-primary submit" value="Sign Up">Register</button>
                             </div>
                         </form>
                         <div class="signin">
-                            <p>Already have an account? <a asp-page="./login">Login here</a></p>
+                            <p>Already have an account? <a asp-page="/login">Login here</a></p>
                         </div>
                         <div class="signin">
-                            <p>Do you a admin? <a asp-page="./LoginAdmin">Login admin here</a></p>
+                            <p>Are you an admin? <a asp-page="./LoginAdmin">Login admin here</a></p>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
