--- a/GoodExchangeApplication/MyRazorPage/Pages/Admin/AccountManagement.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Admin/AccountManagement.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model MyRazorPage.Pages.Admin.AccountManagementModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
 }
