--- a/GoodExchangeApplication/MyRazorPage/Pages/Index.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
-
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     ViewData["Title"] = "Home page";
+    var session = HttpContext.Session.GetString("GetUser");
 }
 
 <!DOCTYPE html>
@@ -9,7 +10,7 @@
 
 <head>
     <title>
-        Gooodies
+        Goodies
      </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -73,7 +74,7 @@
     <nav class="navbar navbar-expand-lg navbar-light shadow">
         <div class="container d-flex justify-content-between align-items-center">
 
-            <a class="navbar-brand text-success logo h1 align-self-center" href="index.html">
+            <a class="navbar-brand text-success logo h1 align-self-center" asp-page="/Index">
                 Goodies
             </a>
 
@@ -85,20 +86,33 @@
                 <div class="flex-fill">
                     <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link" asp-page="/Index">Home</a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link" asp-page="/Homepage/ProductList">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">Categories</a>
+                            <a class="nav-link" href="#">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="shop.html">Products</a>
+                            <a class="nav-link" href="#">Contact</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
+                        @if(session != null)
+                        {
+                            <li class="nav-item">
+                                <form asp-page="/Account/login" asp-page-handler="Logout" method="post">
+                                    <input type="submit" value="Logout"/>
+                                </form>
+                            </li>
+                            
+                        } else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-page="/Account/login">Login</a>
+                            </li>
+                        }
+                        
                     </ul>
                 </div>
                 <div class="navbar align-self-center d-flex">
