--- a/GoodExchangeApplication/MyRazorPage/Pages/Seller/PostManagement.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Seller/PostManagement.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "/postmanagement"
 @model MyRazorPage.Pages.Seller.PostManagementModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     ViewData["Title"] = "PostManagement";
     Layout = "_Layout";
