--- a/GoodExchangeApplication/MyRazorPage/Pages/AddToCart.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/AddToCart.cshtml
@@ -34,10 +34,14 @@
                                 <p><strong>@item.Title</strong></p>
                                 <p>Color: blue</p>
                                 <p>Size: M</p>
-                                <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-sm me-1 mb-2" data-mdb-tooltip-init
-                                        title="Remove item">
-                                    <i class="fas fa-trash"></i>
-                                </button>
+                                <form asp-page-handler="RemoveCart" method="post"> 
+                                    <input type="hidden" name="itemId" value="@item.Id"/>
+                                    <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-sm me-1 mb-2" data-mdb-tooltip-init
+                                            title="Remove item">
+                                        <i class="fas fa-trash"></i>
+                                    </button>
+                                </form>
+                                
                                 <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-danger btn-sm mb-2" data-mdb-tooltip-init
                                         title="Move to the wish list">
                                     <i class="fas fa-heart"></i>
@@ -121,7 +125,7 @@
                                             <p class="mb-0">(including VAT)</p>
                                         </strong>
                                     </div>
-                                    <span><strong>$53.98</strong></span>
+                                    <span><strong>$ @Model.CartDTOs.Sum(x => x.TotalPrice)</strong></span>
                                 </li>
                             </ul>
 
