--- a/GoodExchangeApplication/MyRazorPage/Pages/Homepage/HomePage.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Homepage/HomePage.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/home"
+﻿@* @page "/home"
 @model MyRazorPage.Pages.Homepage.HomePageModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
@@ -83,16 +83,16 @@
                 <div class="flex-fill">
                     <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="#">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="shop.html">Shop</a>
+                            <a class="nav-link" href="#">Shop</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link" href="#">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -448,4 +448,4 @@
     <!-- End Script -->
 </body>
 
-</html>
+</html> *@
