--- a/GoodExchangeApplication/MyRazorPage/Pages/Homepage/CreateProduct.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Homepage/CreateProduct.cshtml
@@ -45,8 +45,8 @@
                     <option value="@i.Id">@i.Name</option>
                 }
                 </select> *@
-                <label asp-for="requestProduct.Category" class="control-label"></label>
-                <select asp-for="requestProduct.Category" class="form-control" asp-items="Model.CategorySelectList"></select>
+                <label asp-for="requestProduct.CategoryId" class="control-label"></label>
+                <select asp-for="requestProduct.CategoryId" class="form-control" asp-items="Model.CategorySelectList"></select>
             </div>
             <div class="form-group">
                 <label asp-for="requestProduct.Price"></label>
