--- a/GoodExchangeApplication/MyRazorPage/Pages/Homepage/UpdateProduct.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Homepage/UpdateProduct.cshtml
@@ -41,9 +41,9 @@
                     <span asp-validation-for="requestProduct.Description" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="requestProduct.Category"></label>
-                <label asp-for="requestProduct.Category" class="control-label"></label>
-                <select asp-for="requestProduct.Category" class="form-control" asp-items="Model.CategoryDTOs"></select>
+                    <label asp-for="requestProduct.CategoryId"></label>
+                <label asp-for="requestProduct.CategoryId" class="control-label"></label>
+                <select asp-for="requestProduct.CategoryId" class="form-control" asp-items="Model.CategoryDTOs"></select>
                 </div>
                 <div class="form-group">
                     <label asp-for="requestProduct.Price"></label>
