--- a/GoodExchangeApplication/MyRazorPage/Pages/AddToCart.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/AddToCart.cshtml
@@ -29,8 +29,6 @@
                             <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
                                 <!-- Data -->
                                 <p><strong>@item.Title</strong></p>
-                                <p>Color: blue</p>
-                                <p>Size: M</p>
                                 <form asp-page-handler="RemoveCart" method="post">
                                     <input type="hidden" name="itemId" value="@item.Id" />
                                     <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-sm me-1 mb-2" data-mdb-tooltip-init title="Remove item">
@@ -93,11 +91,14 @@
             </div>
             <div class="card mb-4 mb-lg-0">
                 <div class="card-body">
-                    <p><strong>We accept</strong></p>
-                    <img class="me-2" width="45px" src="https://mdbcdn.b-cdn.net/wp-content/plugins/woocommerce-gateway-stripe/assets/images/visa.svg" alt="Visa" />
-                    <img class="me-2" width="45px" src="https://mdbcdn.b-cdn.net/wp-content/plugins/woocommerce-gateway-stripe/assets/images/amex.svg" alt="American Express" />
-                    <img class="me-2" width="45px" src="https://mdbcdn.b-cdn.net/wp-content/plugins/woocommerce-gateway-stripe/assets/images/mastercard.svg" alt="Mastercard" />
-                    <img class="me-2" width="45px" src="https://mdbcdn.b-cdn.net/wp-content/plugins/woocommerce/includes/gateways/paypal/assets/images/paypal.webp" alt="PayPal acceptance mark" />
+                    <p><strong>Write note here:</strong></p>
+                    <div>
+                        <input type="text" id="note" />
+                    </div>
+                    <p><strong>Write your address here:</strong></p>
+                    <div>
+                        <input type="text" id="address" />
+                    </div>
                 </div>
             </div>
         </div>
@@ -112,20 +113,29 @@
                             <div>
                                 <strong>Total amount</strong>
                             </div>
-                            <span><strong>
-                                <input type="hidden" name="txtTotalPrice" value="@Model.CartDTOs.Sum(x => x.TotalPrice)"/>
-                                $ @Model.CartDTOs.Sum(x => x.TotalPrice)
+                            <span>
+                                <strong>
+                                    <input type="hidden" id="hiddenTxtTotalPrice" name="txtTotalPrice" value="@Model.CartDTOs.Sum(x => x.TotalPrice)" />
+                                    $ @Model.CartDTOs.Sum(x => x.TotalPrice)
                                 </strong>
                             </span>
                         </li>
                     </ul>
                     <div>
-                        <form asp-page-handler="Checkout" method="post">
-                            <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg btn-block" @* onclick="window.location.href='/checkout'" *@>
+                        <form id="checkoutForm" asp-page-handler="Checkout" method="post">
+                            <input type="hidden" name="txtTotalPrice" value="@Model.CartDTOs.Sum(x => x.TotalPrice)" />
+                            <input type="hidden" name="txtQuantity" value="@Model.CartDTOs.Sum(x => x.Quantity)" />
+                            <input type="hidden" name="txtNote" id="hiddenNote" value="" />
+                            <input type="hidden" name="txtAddress" id="hiddenAddress" value="" />
+                            <input type="hidden" name="txtTransactionTypeId" id="hiddenTransactionTypeId" value="" />
+                            @foreach (var item in Model.CartDTOs)
+                            {
+                                <input type="hidden" name="productIds" value="@item.Id" />
+                            }
+                            <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg btn-block" onclick="updateHiddenFields()">
                                 Go to checkout
                             </button>
                         </form>
-                        
                     </div>
                 </div>
             </div>
@@ -134,6 +144,12 @@
 </div>
 
 <script>
+    function updateHiddenFields() {
+        document.getElementById('hiddenNote').value = document.getElementById('note').value;
+        document.getElementById('hiddenAddress').value = document.getElementById('address').value;
+        document.getElementById('hiddenTransactionTypeId').value = document.getElementById('transactionType').value;
+    }
+
     document.getElementById('transactionType').addEventListener('change', function () {
         var selectedValue = this.value;
         document.querySelectorAll('.transaction-description').forEach(function (desc) {
