--- a/GoodExchangeApplication/MyRazorPage/Pages/CheckOut.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/CheckOut.cshtml
@@ -59,7 +59,7 @@
         style: {
             layout: 'vertical',
             shape: 'rect',
-            color: 'yellow',
+            color: 'gold',
             label: 'paypal'
         },
         createOrder: async function (data, actions) {
