--- a/GoodExchangeApplication/MyRazorPage/Pages/Admin/AccountManagement.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Admin/AccountManagement.cshtml
@@ -1,7 +1,10 @@
 ﻿@page
+@using System.Text.Json
+@using DataAccessObjects.ViewModels.AccountDTOS
 @model MyRazorPage.Pages.Admin.AccountManagementModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
+    
 }
 
