--- a/GoodExchangeApplication/MyRazorPage/Pages/Shared/_Layout.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
                 </div>
 
                 @*Searching bar here*@
-                <div class="col-sm-6 offset-sm-2 offset-md-0 col-lg-5 d-none d-lg-block">
+                @* <div class="col-sm-6 offset-sm-2 offset-md-0 col-lg-5 d-none d-lg-block">
                     <div class="search-bar border rounded-2 px-3 border-dark-subtle">
                         <form id="search-form" class="text-center d-flex align-items-center" action="" method="">
                             <input type="text" class="form-control border-0 bg-transparent"
@@ -87,7 +87,7 @@
                             </svg>
                         </form>
                     </div>
-                </div>
+                </div> *@
             </div>
         </div>
         <div class="container-fluid">
@@ -146,16 +146,10 @@
                         <h3>Quick Links</h3>
                         <ul class="menu-list list-unstyled">
                             <li class="menu-item">
-                                <a href="#" class="nav-link">Home</a>
+                                <a asp-page="/Index" class="nav-link">Home</a>
                             </li>
                             <li class="menu-item">
                                 <a href="#" class="nav-link">About us</a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#" class="nav-link">Offer </a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#" class="nav-link">Services</a>
                             </li>
                             <li class="menu-item">
                                 <a href="#" class="nav-link">Contact Us</a>
@@ -173,12 +167,6 @@
                         <ul class="menu-list list-unstyled">
                             <li class="menu-item">
                                 <a href="#" class="nav-link">FAQs</a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#" class="nav-link">Payment</a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#" class="nav-link">Checkout</a>
                             </li>
                         </ul>
 
