--- a/GoodExchangeApplication/MyRazorPage/Pages/CustomerHistory/UserProfile.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/CustomerHistory/UserProfile.cshtml
@@ -68,25 +68,23 @@
                         <div class="d-flex justify-content-between align-items-center mb-3">
                             <h4 class="text-right">Profile Settings</h4>
                         </div>
-                        <div class="row mt-2">
-                            <div class="col-md-6"><label class="labels">Name</label><input type="text" class="form-control" placeholder="first name" value=""></div>
-                            <div class="col-md-6"><label class="labels">Surname</label><input type="text" class="form-control" value="" placeholder="surname"></div>
-                        </div>
-                        <div class="row mt-3">
-                            <div class="col-md-12"><label class="labels">Mobile Number</label><input type="text" class="form-control" placeholder="enter phone number" value=""></div>
-                            <div class="col-md-12"><label class="labels">Address Line 1</label><input type="text" class="form-control" placeholder="enter address line 1" value=""></div>
-                            <div class="col-md-12"><label class="labels">Address Line 2</label><input type="text" class="form-control" placeholder="enter address line 2" value=""></div>
-                            <div class="col-md-12"><label class="labels">Postcode</label><input type="text" class="form-control" placeholder="enter address line 2" value=""></div>
-                            <div class="col-md-12"><label class="labels">State</label><input type="text" class="form-control" placeholder="enter address line 2" value=""></div>
-                            <div class="col-md-12"><label class="labels">Area</label><input type="text" class="form-control" placeholder="enter address line 2" value=""></div>
-                            <div class="col-md-12"><label class="labels">Email ID</label><input type="text" class="form-control" placeholder="enter email id" value=""></div>
-                            <div class="col-md-12"><label class="labels">Education</label><input type="text" class="form-control" placeholder="education" value=""></div>
-                        </div>
-                        <div class="row mt-3">
+                        <form asp-page-handler="UpdateProfile" method="post">
+                            <div class="row mt-3">
+                                <div class="col-md-12"><label class="labels">Email</label><input type="text" class="form-control" placeholder="enter phone number" value="@json.Email" required></div>
+                                <div class="col-md-12"><label class="labels">UserName</label><input type="text" class="form-control" placeholder="enter address line 1" value="@json.UserName" required></div>
+                                <div class="col-md-12"><label class="labels">Password </label><input type="text" class="form-control" placeholder="enter address line 2" value="@json.Password" required></div>
+                                <div class="col-md-12"><label class="labels">Telephone</label><input type="tel" class="form-control" placeholder="enter address line 2" value="@json.TelephoneNumber" required></div>
+                                <div class="col-md-12"><label class="labels">Address</label><input type="text" class="form-control" placeholder="enter address line 2" value="@json.Address" required></div>
+
+                            </div>
+                            <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Save Profile</button></div>
+                        </form>
+                        
+                        @* <div class="row mt-3">
                             <div class="col-md-6"><label class="labels">Country</label><input type="text" class="form-control" placeholder="country" value=""></div>
                             <div class="col-md-6"><label class="labels">State/Region</label><input type="text" class="form-control" value="" placeholder="state"></div>
-                        </div>
-                        <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Save Profile</button></div>
+                        </div> *@
+                       
                     </div>
                 </div>
                 <div class="col-md-4">
